EE-473, EE-467, EE-471, EE-432, EE-482:  Theming tweaks * Adjusts map coverflow thumbnail border box (set height to auto) to include source name, source name color (#858585) * Adds ee-wrapper div to page contents to fix bottom positioning of footer on welcome page * Updates source target for icons.png so home icon shows on mobile menu button

--- a/drupal/sites/all/themes/greentrees/sass/_s-trimmed.scss
+++ b/drupal/sites/all/themes/greentrees/sass/_s-trimmed.scss
@@ -597,7 +597,7 @@ object {
 .filter-help a:before,
 .js fieldset.collapsible .fieldset-title:before,
 .tree li:before {
-  background: url(../../themes/epa/img/icons.png) no-repeat;
+  background: url(../images/icons.png) no-repeat;
 }
 
 .status { /* check.svg */
