--- a/drupal/sites/all/themes/oneepa/css/MyMaps.css
+++ b/drupal/sites/all/themes/oneepa/css/MyMaps.css
@@ -41,7 +41,7 @@
 .thumbitem-border {
   padding: 2px;
   border: 1px solid #efefef;
-  height: 195px;
+  height: auto;
   width: 190px;
   margin: auto;
 }
@@ -133,9 +133,10 @@
   max-height: 40px;
   max-width: 198px;
   font-size: 65%;
-  padding: 2px 12px;
+  padding: 2px 5px;
   line-height: 1.2;
   padding-bottom: 2px;
+  color: #858585;
 }
 
 .thumbnailImg {
